policies/kubernetes/gatekeeper/overlays/nsa-cisa/templates/k8sallowedregistries_template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedregistries
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRegistries
      validation:
        openAPIV3Schema:
          properties:
            prefixes:
              type: array
              items: { type: string }
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedregistries
        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          c := input.review.object.spec.containers[_]
          not startswith_any(c.image, input.parameters.prefixes)
          msg := sprintf("Image registry not allowed: %v", [c.image])
        }
        startswith_any(s, arr) {
          some i
          startswith(s, arr[i])
        }
