policies/kubernetes/gatekeeper/overlays/nsa-cisa/templates/k8sseccomp_template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sseccomp
spec:
  crd:
    spec:
      names:
        kind: K8sSeccomp
      validation:
        openAPIV3Schema:
          properties:
            allowedProfiles:
              type: array
              items: { type: string }
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sseccomp
        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          not has_allowed()
          msg := "Seccomp profile must be set to an allowed value"
        }
        has_allowed() {
          p := input.review.object.spec.securityContext.seccompProfile.type
          allowed := {x | x:= input.parameters.allowedProfiles[_]}
          p != null
          p == "RuntimeDefault"  # fast path
        } else {
          p := input.review.object.spec.securityContext.seccompProfile.type
          allowed := {x | x:= input.parameters.allowedProfiles[_]}
          p != null
          allowed[p]
        }
